<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.wisewolf.midhilaarts.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.wisewolf.midhilaarts.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.wisewolf.midhilaarts.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.wisewolf.midhilaarts.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_courses"
        android:name="com.wisewolf.midhilaarts.ui.myCourse.MyCourse"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragmentmycourse" />
    <fragment
        android:id="@+id/nav_trans"
        android:name="com.wisewolf.midhilaarts.ui.transaction.Transaction"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.wisewolf.midhilaarts.ui.settings.Settings"
        android:label="Settings"
        tools:layout="@layout/settings" />

    <fragment
        android:id="@+id/nav_qa"
        android:name="com.wisewolf.midhilaarts.ui.QA.QA"
        android:label="QA"
        tools:layout="@layout/activity_qa" />

    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.wisewolf.midhilaarts.ui.aboutUs.AboutUs"
        android:label="AboutUs"
        tools:layout="@layout/fragment_about" />
</navigation>